; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-sch.c_sch_gpio_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-sch.c_sch_gpio_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.sch_gpio = type { i32 }

@GLV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gpio_chip*, i32, i32)* @sch_gpio_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sch_gpio_set(%struct.gpio_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gpio_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.sch_gpio*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.gpio_chip*, %struct.gpio_chip** %4, align 8
  %9 = call %struct.sch_gpio* @gpiochip_get_data(%struct.gpio_chip* %8)
  store %struct.sch_gpio* %9, %struct.sch_gpio** %7, align 8
  %10 = load %struct.sch_gpio*, %struct.sch_gpio** %7, align 8
  %11 = getelementptr inbounds %struct.sch_gpio, %struct.sch_gpio* %10, i32 0, i32 0
  %12 = call i32 @spin_lock(i32* %11)
  %13 = load %struct.sch_gpio*, %struct.sch_gpio** %7, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @GLV, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @sch_gpio_reg_set(%struct.sch_gpio* %13, i32 %14, i32 %15, i32 %16)
  %18 = load %struct.sch_gpio*, %struct.sch_gpio** %7, align 8
  %19 = getelementptr inbounds %struct.sch_gpio, %struct.sch_gpio* %18, i32 0, i32 0
  %20 = call i32 @spin_unlock(i32* %19)
  ret void
}

declare dso_local %struct.sch_gpio* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @sch_gpio_reg_set(%struct.sch_gpio*, i32, i32, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
